AML 0.1.3, 2015-05-13 (Not tested)
-----------------------
- Fixed method "negate" of CSPModel.
- Updated AreCompliant operation.
- Added WhyAreNotCompliant operation first version.

AML 0.1.2, 2015-05-06
-----------------------
- Updated model with definition and monitoring references.
- Fixed AreCompliant operation.
- Updated iAgree parser.

AML 0.1.1, 2015-04-28
-----------------------
- Fixed AreCompliant operation.

AML 0.1.0, 2015-04-27
-----------------------
- AML now support enum datatypes.
- Added method to support AND constraints breaking.
- AML now support WSAG old versions.