@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.us.isa</groupId>
 	<artifactId>AML</artifactId>
-	<version>0.1.3</version>
+	<version>0.1.4</version>
 	
 	<properties>
 		<java.version>1.8</java.version>
