@@ -1,0 +1,20 @@
+using CP;
+
+range range_time = 0..100;
+range range_percent = 0..100;
+range range_int = 0..500;
+
+
+dvar int InputFileSize in range_int;
+dvar boolean ImageTranslation;
+dvar int Cost in range_int;
+dvar int InputErrors in range_percent;
+dvar int TranslationTime in range_time;
+
+subject to {
+	C1: Cost == 0;
+	G1: (ImageTranslation == false) => (TranslationTime <= 1);
+	G2: (ImageTranslation == true) => (TranslationTime <= 2);
+	G3: InputErrors <= 1 + 3;
+	G4: (InputErrors > 1) => (TranslationTime <= 1);
+}
