@@ -1,3 +1,8 @@
+AML 0.1.4, 2015-05-15 (Not tested)
+-----------------------
+- Constraints sum operation bug fixed.
+- Added objective function to CSPModel.
+
 AML 0.1.3, 2015-05-13 (Not tested)
 -----------------------
 - Fixed method "negate" of CSPModel.
